# JetNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: startup.md
docs/kernels/: crop.md
src/core/: CMakeLists.txt  Kernel.cpp  Kernel.h  kernel.cpp  kernel.h  shape.cpp  shape.h  tensor.cpp  tensor.h
src/kernels/: crop.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  kernel_test.cpp  shape_test.cpp  tensor_test.cpp
